Fix layout issue of phone safari

--- a/src/containers/SldEditor/sldEditor.css
+++ b/src/containers/SldEditor/sldEditor.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   width: 100%;
-  height: calc(100vh - 90px);
+  height: calc(100% - 90px);
   overflow: hidden;
   font-size: 1rem;
   margin: 0 auto;
@@ -451,8 +451,8 @@
   display: flex;
   position: fixed;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: black;
