--- a/src/style.css
+++ b/src/style.css
@@ -8,10 +8,11 @@ body {
   font-family: "Source Sans Pro", "Noto Sans TC", sans-serif;
 }
 
+html,
 body,
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
